--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-:root, ::before, ::after {
+:root {
  --color-gray-100: #F3F6FF;
  --color-secondary: #EFF2FC;
- --color-devider-border: #E2E5F1;
+ --color-devider-border: #e3e6f2;
  --color-forms-border: #D4D7E5;
  --color-input-placeholder: #B4B7C9;
  --color-muted-text: #9397AD;
@@ -10,8 +10,7 @@
  --color-navigation: #33354D;
  --color-heading-dark: #0B0F19;
 
- --color-primary: #6366F1; 
- --color-gradient: #;
+ --color-primary: #6366F1;
 
  --color-error: #EF4444;
  --color-success: #22C55E;
@@ -28,4 +27,119 @@
 body, section, div, footer, main, aside, blockquote, p, span {
 margin: 0;
 padding: 0;
+}
+body {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+}
+
+.container {
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-primary {
+  background-color: var(--color-primary);
+  color: #FFF;
+  border-radius: 8px;
+  padding: 12px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.btn-primary:hover {
+  background-color: var(--color-body-text);
+  color: #FFF;
+  text-decoration: none;
+}
+.btn-primary i {
+  margin-right: 0.5rem;
+}
+.btn-toggle-switch {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.toggle-switch {
+  position: relative;
+  display:  inline-block;
+  width: 45px;
+  height: 25px;
+}
+.toggle-switch input {
+  opacity: 0;
+}
+.toggle-switch input:checked + .slider {
+  background-color: var(--color-primary);
+}
+.toggle-switch input:focus + .slider {
+  box-shadow: 0 0 1px var(--color-primary);
+}
+.toggle-switch input:checked + .slider:before {
+  transform: translateX(18px);
+  background-color: #FFF;;
+}
+.toggle-switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--color-muted-text);
+  transition: all 0.2s;
+}
+.toggle-switch .slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 2.5px;
+  background-color: #FFF;
+  transition: all 0.2s;
+}
+.toggle-switch .slider.round {
+  border-radius: 35px;
+}
+.toggle-switch .slider.round:before {
+  border-radius: 50%;
+}
+
+.nav-link {
+  color: var(--color-heading-dark);
+  font-weight: 600;
+  text-decoration: none; 
+}
+.nav-link:hover {
+  color: var(--color-primary);
+  text-decoration: underline;
+}
+.active {
+  color: var(--color-primary);
+  text-decoration: underline;
+}
+header .container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto auto;
+  grid-template-areas: "logo sw mobile";
+  gap: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
