--- a/styles.css
+++ b/styles.css
@@ -397,3 +397,47 @@ ul {
     padding-bottom: 1rem;
   }
 }
+.rating-container {
+  background-color: var(--color-gray-100);
+  margin-top: 10rem;
+  height: 500px;
+  h2 {
+    color: var(--color-heading-dark);
+    font-weight: 900;
+    font-size: 40px;
+    width: 306px;
+    height: 104px;
+    margin-right: 5rem;
+    margin-top: 5rem;
+  }
+  p {
+    padding: 1rem;
+    color: var(--color-body-text);
+  }
+  .flex {
+    display: flex;
+    gap: 1rem;
+    font-size: 18px;
+  }
+  .box-1, .box-2 {
+    width: 416px;
+    height: 300px;
+    border: 1px solid #ffffff;
+    box-shadow: 4px 4px 12px var(--color-devider-border);
+    border-radius: 10px;
+    background-color: #fff;
+    margin-top: 5rem;
+  }
+  .avatar {
+    margin-left: 1rem;
+  }
+  .quotes {
+    position: absolute;
+    margin-top: -2rem;
+    margin-left: .5rem;
+  }
+  .stars {
+    padding-top: 3rem;
+    padding-left: 1rem;
+  }
+}
