--- a/styles.css
+++ b/styles.css
@@ -557,3 +557,68 @@ ul {
   }
 }
 }
+
+
+
+.subscribe {
+ place-items: center;
+ .container {
+  display: flex;
+  
+  margin-top: rem;
+  width: 1200px;
+  height: 222px;
+  padding: 5rem;
+  background-color: var(--color-gray-100);
+img {
+  margin-right: 2rem;
+
+}
+  h2{
+    font-size: 24px;
+    font-weight: 800;
+    text-align: left;
+    margin-top: -0.1rem;
+    width: 418px;
+  }
+ }
+
+
+
+
+
+.btns {
+  margin-top: 0.5rem;
+  background-color: #6366F1;
+  color: #fff;
+  padding: .5em 1em;
+  border: 0;
+  font-size: 1rem;
+  height: 50px;
+  width: 130px;
+}
+.subscribe-group {
+display: flex;
+margin-left: 4rem;
+.btns {
+  border-radius: 0 10px 10px 0;
+}
+}
+.subscribe-group {
+position: relative
+}
+.subscribe-form {
+margin-top: 0.5rem;
+padding-left: 2rem;
+background-image: url('Images/envelope.svg');
+background-repeat: no-repeat;
+background-position: 10px 50%;
+color: var(--color-input-placeholder);
+opacity: 0.5;
+border-radius: 10px 0 0 10px;
+border: 1px solid var(--color-forms-border);
+font-size: 12px;
+width: 300px;
+height: 50px;
+}
+}
