--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body {
 .nav-link {
   color: var(--color-heading-dark);
   font-weight: 600;
-  text-decoration: none; 
+  text-decoration: none;
 }
 .nav-link:hover {
   color: var(--color-primary);
@@ -132,6 +132,9 @@ body {
 .active {
   color: var(--color-primary);
   text-decoration: underline;
+}
+#logo {
+  margin-top: .25rem;
 }
 header .container {
   display: grid;
@@ -472,13 +475,12 @@ ul {
     }
     .blue-theme {
       display: grid;
-      grid-template-rows: auto;
       width: 196px;
       height: 160px;
       border-radius: 10px;
       text-align: center;
       img {
-        margin: 1.5rem;
+        margin: 1rem;
       }
       span {
         font-size: 14px;
@@ -502,7 +504,6 @@ ul {
     }
     .green-theme {
       display: grid;
-      grid-template-rows: auto;
       width: 196px;
       height: 160px;
       margin-left: 1.5rem;
